--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-toolbar>
+<ion-header no-border>
+	<ion-toolbar>
+		<ion-buttons slot="primary">
+			<ion-button class="menuButton">Menu</ion-button>
+			<ion-button class="menuButton">About Us</ion-button>
+			<ion-button class="menuButton">Contact Us</ion-button>
+		</ion-buttons>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+	<div class="flex-container">
+		<div style="title">
+			<img src="../../assets/pictures/logoTitle.png">
+		</div>
+		<div class="placeOrderArea flex-element" (click)="redirect('/order1')">
+			<div class="placeOrderTitle">
+				Place an Order!
+			</div>
+		</div>
+	</div>
 </ion-content>
